Minor presentation changes.

--- a/example_data/RP66V1/HTML/206_05a-_3_DWL_DWL_WIRE_258276498.DLIS.html
+++ b/example_data/RP66V1/HTML/206_05a-_3_DWL_DWL_WIRE_258276498.DLIS.html
@@ -13036,135 +13036,69 @@ th.monospace, td.monospace {
       </tr>
     </table>
     <h4>X Axis Spacing</h4>
-    <p>Definitions: &apos;backward&apos; if space &lt; -0.5 median&#010;&apos;duplicate&apos; if -0.5 median &lt;= space &lt; 0.5 median&#010;&apos;normal&apos; if 0.5 median &lt;= space &lt; 1.5 median&#010;&apos;skipped&apos; if space &gt;= 1.5 median&#010;</p>
     <table class="monospace">
       <tr>
         <th class="monospace">X Axis Spacing</th>
         <th class="monospace">Value</th>
+        <th class="monospace">Description</th>
       </tr>
       <tr>
         <td class="monospace">Minimum</td>
         <td class="monospace">1000.0 [ms]</td>
+        <td class="monospace"/>
       </tr>
       <tr>
         <td class="monospace">Mean</td>
         <td class="monospace">1000.0010869565217 [ms]</td>
+        <td class="monospace"/>
       </tr>
       <tr>
         <td class="monospace">Median</td>
         <td class="monospace">1000.0 [ms]</td>
+        <td class="monospace"/>
       </tr>
       <tr>
         <td class="monospace">Maximum</td>
         <td class="monospace">1001.0 [ms]</td>
+        <td class="monospace"/>
       </tr>
       <tr>
         <td class="monospace">Range</td>
         <td class="monospace">1.0 (0.100000%) [ms]</td>
+        <td class="monospace"/>
       </tr>
       <tr>
         <td class="monospace">Std. Dev.</td>
         <td class="monospace">0.03295110085048721 [ms]</td>
+        <td class="monospace"/>
       </tr>
       <tr>
-        <td class="monospace">Count of Normal</td>
+        <td class="monospace">Count of back</td>
+        <td class="monospace">0</td>
+        <td class="monospace">spacing &lt; -0.5 median</td>
+      </tr>
+      <tr>
+        <td class="monospace">Count of duplicate</td>
+        <td class="monospace">0</td>
+        <td class="monospace">-0.5 median &lt;= spacing &lt; 0.5 median</td>
+      </tr>
+      <tr>
+        <td class="monospace">Count of normal</td>
         <td class="monospace">920</td>
+        <td class="monospace">0.5 median &lt;= spacing &lt; 1.5 median</td>
       </tr>
       <tr>
-        <td class="monospace">Count of Duplicate</td>
+        <td class="monospace">Count of skipped</td>
         <td class="monospace">0</td>
-      </tr>
-      <tr>
-        <td class="monospace">Count of Skipped</td>
-        <td class="monospace">0</td>
-      </tr>
-      <tr>
-        <td class="monospace">Count of Back</td>
-        <td class="monospace">0</td>
+        <td class="monospace">spacing &gt;= 1.5 median</td>
       </tr>
     </table>
     <p>Frame spacing frequency:</p>
-    <pre>     Value [   N]: Relative Frequency&#010;  1000.000 [ 919]: ********************************************************************************&#010;  1000.100 [   0]: &#010;  1000.200 [   0]: &#010;  1000.300 [   0]: &#010;  1000.400 [   0]: &#010;  1000.500 [   0]: &#010;  1000.600 [   0]: &#010;  1000.700 [   0]: &#010;  1000.800 [   0]: &#010;  1000.900 [   1]: </pre>
-    <h4>X Axis</h4>
-    <table class="monospace">
-      <tr>
-        <th class="monospace">X Axis</th>
-        <th class="monospace">Value</th>
-      </tr>
-      <tr>
-        <td class="monospace">Channel</td>
-        <td class="monospace">OBNAME: O: 2 C: 4 I: b&apos;TIME&apos;</td>
-      </tr>
-      <tr>
-        <td class="monospace">Long Name</td>
-        <td class="monospace">1 second River Time</td>
-      </tr>
-      <tr>
-        <td class="monospace">Minimum</td>
-        <td class="monospace">16677259.0 [ms]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Maximum</td>
-        <td class="monospace">17597260.0 [ms]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Frame Count</td>
-        <td class="monospace">921</td>
-      </tr>
-    </table>
-    <h4>X Axis Spacing</h4>
-    <p>Definitions: &apos;backward&apos; if space &lt; -0.5 median&#010;&apos;duplicate&apos; if -0.5 median &lt;= space &lt; 0.5 median&#010;&apos;normal&apos; if 0.5 median &lt;= space &lt; 1.5 median&#010;&apos;skipped&apos; if space &gt;= 1.5 median&#010;</p>
-    <table class="monospace">
-      <tr>
-        <th class="monospace">X Axis Spacing</th>
-        <th class="monospace">Value</th>
-      </tr>
-      <tr>
-        <td class="monospace">Minimum</td>
-        <td class="monospace">1000.0 [ms]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Mean</td>
-        <td class="monospace">1000.0010869565217 [ms]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Median</td>
-        <td class="monospace">1000.0 [ms]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Maximum</td>
-        <td class="monospace">1001.0 [ms]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Range</td>
-        <td class="monospace">1.0 (0.100000%) [ms]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Std. Dev.</td>
-        <td class="monospace">0.03295110085048721 [ms]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Count of Normal</td>
-        <td class="monospace">920</td>
-      </tr>
-      <tr>
-        <td class="monospace">Count of Duplicate</td>
-        <td class="monospace">0</td>
-      </tr>
-      <tr>
-        <td class="monospace">Count of Skipped</td>
-        <td class="monospace">0</td>
-      </tr>
-      <tr>
-        <td class="monospace">Count of Back</td>
-        <td class="monospace">0</td>
-      </tr>
-    </table>
-    <p>Frame spacing frequency:</p>
-    <pre>     Value [   N]: Relative Frequency&#010;  1000.000 [ 919]: ********************************************************************************&#010;  1000.100 [   0]: &#010;  1000.200 [   0]: &#010;  1000.300 [   0]: &#010;  1000.400 [   0]: &#010;  1000.500 [   0]: &#010;  1000.600 [   0]: &#010;  1000.700 [   0]: &#010;  1000.800 [   0]: &#010;  1000.900 [   1]: </pre>
+    <pre>        Value [   N]: Relative Frequency&#010;  1000.000000 [ 919]: ********************************************************************************&#010;  1000.100000 [   0]: &#010;  1000.200000 [   0]: &#010;  1000.300000 [   0]: &#010;  1000.400000 [   0]: &#010;  1000.500000 [   0]: &#010;  1000.600000 [   0]: &#010;  1000.700000 [   0]: &#010;  1000.800000 [   0]: &#010;  1000.900000 [   1]: </pre>
     <h4>Frame Analysis</h4>
     <p>Available frames: 921 X axis from 16677259.000 to 17597260.000 interval 1000.000 [ms]</p>
-    <p>Frame analysis on &lt;Slice on length=921 start=0 stop=921 step=1&gt; frame(s). Number of frames created: 921 Numpy total memory: 14,736 bytes</p>
+    <p>Frame analysis on<tt> &lt;Slice on length=921 start=0 stop=921 step=1&gt;</tt> frame(s). Frame size: 16 bytes. Number of frames created: 921 Numpy total memory: 14,736 bytes</p>
+    <p>RP66V1 Frame size 16 (bytes/frame)) represented internally as 16 (bytes/frame).</p>
     <table class="monospace">
       <tr>
         <th class="monospace">Channel</th>
@@ -13282,135 +13216,69 @@ th.monospace, td.monospace {
       </tr>
     </table>
     <h4>X Axis Spacing</h4>
-    <p>Definitions: &apos;backward&apos; if space &lt; -0.5 median&#010;&apos;duplicate&apos; if -0.5 median &lt;= space &lt; 0.5 median&#010;&apos;normal&apos; if 0.5 median &lt;= space &lt; 1.5 median&#010;&apos;skipped&apos; if space &gt;= 1.5 median&#010;</p>
     <table class="monospace">
       <tr>
         <th class="monospace">X Axis Spacing</th>
         <th class="monospace">Value</th>
+        <th class="monospace">Description</th>
       </tr>
       <tr>
         <td class="monospace">Minimum</td>
         <td class="monospace">400.0 [ms]</td>
+        <td class="monospace"/>
       </tr>
       <tr>
         <td class="monospace">Mean</td>
         <td class="monospace">400.0004347826087 [ms]</td>
+        <td class="monospace"/>
       </tr>
       <tr>
         <td class="monospace">Median</td>
         <td class="monospace">400.0 [ms]</td>
+        <td class="monospace"/>
       </tr>
       <tr>
         <td class="monospace">Maximum</td>
         <td class="monospace">401.0 [ms]</td>
+        <td class="monospace"/>
       </tr>
       <tr>
         <td class="monospace">Range</td>
         <td class="monospace">1.0 (0.250000%) [ms]</td>
+        <td class="monospace"/>
       </tr>
       <tr>
         <td class="monospace">Std. Dev.</td>
         <td class="monospace">0.0208469079908467 [ms]</td>
+        <td class="monospace"/>
       </tr>
       <tr>
-        <td class="monospace">Count of Normal</td>
+        <td class="monospace">Count of back</td>
+        <td class="monospace">0</td>
+        <td class="monospace">spacing &lt; -0.5 median</td>
+      </tr>
+      <tr>
+        <td class="monospace">Count of duplicate</td>
+        <td class="monospace">0</td>
+        <td class="monospace">-0.5 median &lt;= spacing &lt; 0.5 median</td>
+      </tr>
+      <tr>
+        <td class="monospace">Count of normal</td>
         <td class="monospace">2,300</td>
+        <td class="monospace">0.5 median &lt;= spacing &lt; 1.5 median</td>
       </tr>
       <tr>
-        <td class="monospace">Count of Duplicate</td>
+        <td class="monospace">Count of skipped</td>
         <td class="monospace">0</td>
-      </tr>
-      <tr>
-        <td class="monospace">Count of Skipped</td>
-        <td class="monospace">0</td>
-      </tr>
-      <tr>
-        <td class="monospace">Count of Back</td>
-        <td class="monospace">0</td>
+        <td class="monospace">spacing &gt;= 1.5 median</td>
       </tr>
     </table>
     <p>Frame spacing frequency:</p>
-    <pre>     Value [    N]: Relative Frequency&#010;   400.000 [ 2299]: ********************************************************************************&#010;   400.100 [    0]: &#010;   400.200 [    0]: &#010;   400.300 [    0]: &#010;   400.400 [    0]: &#010;   400.500 [    0]: &#010;   400.600 [    0]: &#010;   400.700 [    0]: &#010;   400.800 [    0]: &#010;   400.900 [    1]: </pre>
-    <h4>X Axis</h4>
-    <table class="monospace">
-      <tr>
-        <th class="monospace">X Axis</th>
-        <th class="monospace">Value</th>
-      </tr>
-      <tr>
-        <td class="monospace">Channel</td>
-        <td class="monospace">OBNAME: O: 2 C: 5 I: b&apos;TIME&apos;</td>
-      </tr>
-      <tr>
-        <td class="monospace">Long Name</td>
-        <td class="monospace">400 milli-second time channel</td>
-      </tr>
-      <tr>
-        <td class="monospace">Minimum</td>
-        <td class="monospace">16677259.0 [ms]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Maximum</td>
-        <td class="monospace">17597260.0 [ms]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Frame Count</td>
-        <td class="monospace">2301</td>
-      </tr>
-    </table>
-    <h4>X Axis Spacing</h4>
-    <p>Definitions: &apos;backward&apos; if space &lt; -0.5 median&#010;&apos;duplicate&apos; if -0.5 median &lt;= space &lt; 0.5 median&#010;&apos;normal&apos; if 0.5 median &lt;= space &lt; 1.5 median&#010;&apos;skipped&apos; if space &gt;= 1.5 median&#010;</p>
-    <table class="monospace">
-      <tr>
-        <th class="monospace">X Axis Spacing</th>
-        <th class="monospace">Value</th>
-      </tr>
-      <tr>
-        <td class="monospace">Minimum</td>
-        <td class="monospace">400.0 [ms]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Mean</td>
-        <td class="monospace">400.0004347826087 [ms]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Median</td>
-        <td class="monospace">400.0 [ms]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Maximum</td>
-        <td class="monospace">401.0 [ms]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Range</td>
-        <td class="monospace">1.0 (0.250000%) [ms]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Std. Dev.</td>
-        <td class="monospace">0.0208469079908467 [ms]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Count of Normal</td>
-        <td class="monospace">2,300</td>
-      </tr>
-      <tr>
-        <td class="monospace">Count of Duplicate</td>
-        <td class="monospace">0</td>
-      </tr>
-      <tr>
-        <td class="monospace">Count of Skipped</td>
-        <td class="monospace">0</td>
-      </tr>
-      <tr>
-        <td class="monospace">Count of Back</td>
-        <td class="monospace">0</td>
-      </tr>
-    </table>
-    <p>Frame spacing frequency:</p>
-    <pre>     Value [    N]: Relative Frequency&#010;   400.000 [ 2299]: ********************************************************************************&#010;   400.100 [    0]: &#010;   400.200 [    0]: &#010;   400.300 [    0]: &#010;   400.400 [    0]: &#010;   400.500 [    0]: &#010;   400.600 [    0]: &#010;   400.700 [    0]: &#010;   400.800 [    0]: &#010;   400.900 [    1]: </pre>
+    <pre>        Value [    N]: Relative Frequency&#010;   400.000000 [ 2299]: ********************************************************************************&#010;   400.100000 [    0]: &#010;   400.200000 [    0]: &#010;   400.300000 [    0]: &#010;   400.400000 [    0]: &#010;   400.500000 [    0]: &#010;   400.600000 [    0]: &#010;   400.700000 [    0]: &#010;   400.800000 [    0]: &#010;   400.900000 [    1]: </pre>
     <h4>Frame Analysis</h4>
     <p>Available frames: 2301 X axis from 16677259.000 to 17597260.000 interval 400.000 [ms]</p>
-    <p>Frame analysis on &lt;Slice on length=2301 start=0 stop=2301 step=1&gt; frame(s). Number of frames created: 2301 Numpy total memory: 395,772 bytes</p>
+    <p>Frame analysis on<tt> &lt;Slice on length=2301 start=0 stop=2301 step=1&gt;</tt> frame(s). Frame size: 172 bytes. Number of frames created: 2301 Numpy total memory: 395,772 bytes</p>
+    <p>RP66V1 Frame size 172 (bytes/frame)) represented internally as 172 (bytes/frame).</p>
     <table class="monospace">
       <tr>
         <th class="monospace">Channel</th>
