--- a/example_data/RP66V1/HTML/BASIC_FILE.dlis.html
+++ b/example_data/RP66V1/HTML/BASIC_FILE.dlis.html
@@ -1197,135 +1197,69 @@ th.monospace, td.monospace {
       </tr>
     </table>
     <h4>X Axis Spacing</h4>
-    <p>Definitions: &apos;backward&apos; if space &lt; -0.5 median&#010;&apos;duplicate&apos; if -0.5 median &lt;= space &lt; 0.5 median&#010;&apos;normal&apos; if 0.5 median &lt;= space &lt; 1.5 median&#010;&apos;skipped&apos; if space &gt;= 1.5 median&#010;</p>
     <table class="monospace">
       <tr>
         <th class="monospace">X Axis Spacing</th>
         <th class="monospace">Value</th>
+        <th class="monospace">Description</th>
       </tr>
       <tr>
         <td class="monospace">Minimum</td>
         <td class="monospace">0.09999999999990905 [m]</td>
+        <td class="monospace"/>
       </tr>
       <tr>
         <td class="monospace">Mean</td>
         <td class="monospace">0.09999999999990905 [m]</td>
+        <td class="monospace"/>
       </tr>
       <tr>
         <td class="monospace">Median</td>
         <td class="monospace">0.09999999999990905 [m]</td>
+        <td class="monospace"/>
       </tr>
       <tr>
         <td class="monospace">Maximum</td>
         <td class="monospace">0.09999999999990905 [m]</td>
+        <td class="monospace"/>
       </tr>
       <tr>
         <td class="monospace">Range</td>
         <td class="monospace">0.0 (0.000000%) [m]</td>
+        <td class="monospace"/>
       </tr>
       <tr>
         <td class="monospace">Std. Dev.</td>
         <td class="monospace">0.0 [m]</td>
+        <td class="monospace"/>
       </tr>
       <tr>
-        <td class="monospace">Count of Normal</td>
+        <td class="monospace">Count of back</td>
+        <td class="monospace">0</td>
+        <td class="monospace">spacing &lt; -0.5 median</td>
+      </tr>
+      <tr>
+        <td class="monospace">Count of duplicate</td>
+        <td class="monospace">0</td>
+        <td class="monospace">-0.5 median &lt;= spacing &lt; 0.5 median</td>
+      </tr>
+      <tr>
+        <td class="monospace">Count of normal</td>
         <td class="monospace">648</td>
+        <td class="monospace">0.5 median &lt;= spacing &lt; 1.5 median</td>
       </tr>
       <tr>
-        <td class="monospace">Count of Duplicate</td>
+        <td class="monospace">Count of skipped</td>
         <td class="monospace">0</td>
-      </tr>
-      <tr>
-        <td class="monospace">Count of Skipped</td>
-        <td class="monospace">0</td>
-      </tr>
-      <tr>
-        <td class="monospace">Count of Back</td>
-        <td class="monospace">0</td>
+        <td class="monospace">spacing &gt;= 1.5 median</td>
       </tr>
     </table>
     <p>Frame spacing frequency:</p>
-    <pre>     Value [   N]: Relative Frequency&#010;    -0.400 [ 648]: ********************************************************************************</pre>
-    <h4>X Axis</h4>
-    <table class="monospace">
-      <tr>
-        <th class="monospace">X Axis</th>
-        <th class="monospace">Value</th>
-      </tr>
-      <tr>
-        <td class="monospace">Channel</td>
-        <td class="monospace">OBNAME: O: 2 C: 0 I: b&apos;DEPT&apos;</td>
-      </tr>
-      <tr>
-        <td class="monospace">Long Name</td>
-        <td class="monospace">DEPT/Depth</td>
-      </tr>
-      <tr>
-        <td class="monospace">Minimum</td>
-        <td class="monospace">2889.4 [m]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Maximum</td>
-        <td class="monospace">2954.199999999941 [m]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Frame Count</td>
-        <td class="monospace">649</td>
-      </tr>
-    </table>
-    <h4>X Axis Spacing</h4>
-    <p>Definitions: &apos;backward&apos; if space &lt; -0.5 median&#010;&apos;duplicate&apos; if -0.5 median &lt;= space &lt; 0.5 median&#010;&apos;normal&apos; if 0.5 median &lt;= space &lt; 1.5 median&#010;&apos;skipped&apos; if space &gt;= 1.5 median&#010;</p>
-    <table class="monospace">
-      <tr>
-        <th class="monospace">X Axis Spacing</th>
-        <th class="monospace">Value</th>
-      </tr>
-      <tr>
-        <td class="monospace">Minimum</td>
-        <td class="monospace">0.09999999999990905 [m]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Mean</td>
-        <td class="monospace">0.09999999999990905 [m]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Median</td>
-        <td class="monospace">0.09999999999990905 [m]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Maximum</td>
-        <td class="monospace">0.09999999999990905 [m]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Range</td>
-        <td class="monospace">0.0 (0.000000%) [m]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Std. Dev.</td>
-        <td class="monospace">0.0 [m]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Count of Normal</td>
-        <td class="monospace">648</td>
-      </tr>
-      <tr>
-        <td class="monospace">Count of Duplicate</td>
-        <td class="monospace">0</td>
-      </tr>
-      <tr>
-        <td class="monospace">Count of Skipped</td>
-        <td class="monospace">0</td>
-      </tr>
-      <tr>
-        <td class="monospace">Count of Back</td>
-        <td class="monospace">0</td>
-      </tr>
-    </table>
-    <p>Frame spacing frequency:</p>
-    <pre>     Value [   N]: Relative Frequency&#010;    -0.400 [ 648]: ********************************************************************************</pre>
+    <pre>        Value [   N]: Relative Frequency&#010;    -0.400000 [ 648]: ********************************************************************************</pre>
     <h4>Frame Analysis</h4>
     <p>Available frames: 649 X axis from 2889.400 to 2954.200 interval 0.100 [m]</p>
-    <p>Frame analysis on &lt;Slice on length=649 start=0 stop=649 step=1&gt; frame(s). Number of frames created: 649 Numpy total memory: 18,172 bytes</p>
+    <p>Frame analysis on<tt> &lt;Slice on length=649 start=0 stop=649 step=1&gt;</tt> frame(s). Frame size: 28 bytes. Number of frames created: 649 Numpy total memory: 18,172 bytes</p>
+    <p>RP66V1 Frame size 28 (bytes/frame)) represented internally as 28 (bytes/frame).</p>
     <table class="monospace">
       <tr>
         <th class="monospace">Channel</th>
