WIP: Fix LIS to LAS.

--- a/example_data/LIS/HTML/DILLSON-1_WELL_LOGS_FILE-049.LIS.html
+++ b/example_data/LIS/HTML/DILLSON-1_WELL_LOGS_FILE-049.LIS.html
@@ -68,6 +68,8 @@
       <span class="lrFileTell">0x44</span>&nbsp;<span class="lrType">Logical Record type 232</span>&nbsp;<span class="lrDescription">FLIC comment</span><br/></p>
     <p>Verbatim bytes [30]:</p>
     <pre class="verbatim">RDIP,DIPDAT.005&#013;&#010;DIPDAT.005&#013;&#010;&#000;</pre>
+    <p>EBCDIC -&gt; ASCII:</p>
+    <pre class="verbatim">&#234;&#224;&#241;&amp;&#140;&#224;&#241;&amp;&#224;&#160;&#232;&#006;&#144;&#144;&#149;&#013;&#142;&#224;&#241;&amp;&#224;&#160;&#232;&#006;&#144;&#144;&#149;&#013;&#142;&#000;</pre>
     <hr/>
     <a name="110"/>
     <p>
@@ -1366,6 +1368,6 @@
       <a href="#top">To top</a>
     </p>
     <hr/>
-    <p class="copyright">Produced by LisToHtml version: 0.1.0, date: 2011-06-14, rights: &quot;Copyright (c) Paul Ross&quot; CPU time: 0.334 (s)</p>
+    <p class="copyright">Produced by LisToHtml version: 0.1.0, date: 2011-06-14, rights: &quot;Copyright (c) Paul Ross&quot; CPU time: 0.405 (s)</p>
   </body>
 </html>
