WIP: Mostly LAS and HTML generation.

--- a/example_data/LAS/HTML/index.html
+++ b/example_data/LAS/HTML/index.html
@@ -2,15 +2,135 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <meta charset="UTF-8" content="width=device-width, initial-scale=1" name="viewport"/>
-    <title>LASToHtml Scan of example_data/LAS/HTML</title>
+    <meta charset="UTF-8"/>
+    <title>Results of &quot;index.html&quot;</title>
+    <style>/* CSS for index pages */
+body {
+font-size:      12px;
+font-family:    arial,helvetica,sans-serif;
+margin:         6px;
+padding:        6px;
+}
+h1 {
+color:            darkgoldenrod;
+font-family:      sans-serif;
+font-size:        14pt;
+font-weight:      bold;
+}
+h2 {
+color:          IndianRed;
+font-family:    sans-serif;
+font-size:      14pt;
+font-weight:    normal;
+}
+h3 {
+color:          Black;
+font-family:    sans-serif;
+font-size:      12pt;
+font-weight:    bold;
+}
+h4 {
+color:          FireBrick;
+font-family:    sans-serif;
+font-size:      10pt;
+font-weight:    bold;
+}
+span.line {
+color:           slategrey;
+/*font-style:    italic; */
+}
+span.file {
+ color:         black;
+ font-style:    italic;
+}
+
+table.filetable {
+    border:         2px solid black;
+/*    font-family:    monospace; */
+    color:          black;
+}
+th.filetable, td.filetable {
+    /* border: 1px solid black; */
+    border: 1px;
+    border-top-style:solid;
+    border-right-style:dotted;
+    border-bottom-style:none;
+    border-left-style:none;
+    vertical-align:top;
+    padding: 2px 6px 2px 6px; 
+}
+</style>
   </head>
   <body>
-    <h1>Index of RP66V1 Scan: example_data/LAS/HTML</h1>
-    <p>Command:</p>
-    <p>
-      <pre>src/TotalDepth/LAS/LASToHTML.py -r example_data/LAS/data/ example_data/LAS/HTML/</pre>
-    </p>
-    <table class="filetable"/>
+    <table class="filetable">
+      <tr>
+        <th class="filetable" colspan="1">Path</th>
+        <th class="filetable">File Type</th>
+        <th class="filetable">Sections</th>
+        <th class="filetable">Channels</th>
+        <th class="filetable">Frames</th>
+        <th class="filetable">STRT</th>
+        <th class="filetable">STOP</th>
+        <th class="filetable">STEP</th>
+        <th class="filetable">Size</th>
+        <th class="filetable">Time</th>
+      </tr>
+      <tr class="filetable">
+        <td class="filetable" colspan="1" rowspan="1">
+          <a class="filetable" href="Ver_12_Canadian.las.html">Ver_12_Canadian.las.html</a>
+        </td>
+        <td class="filetable">LAS1.2</td>
+        <td class="filetable">V, W, C, P, O, A</td>
+        <td class="filetable">DEPT, ILD, ILM, SFLU, SP, DPHI, NPHI, GR, CALI</td>
+        <td class="filetable">861</td>
+        <td class="filetable">1509.0 (M)</td>
+        <td class="filetable">1640.064 (M)</td>
+        <td class="filetable">0.1524 (M)</td>
+        <td class="filetable">104,719</td>
+        <td class="filetable">0.039 (s)</td>
+      </tr>
+      <tr class="filetable">
+        <td class="filetable" colspan="1" rowspan="1">
+          <a class="filetable" href="Ver_12_USA.las.html">Ver_12_USA.las.html</a>
+        </td>
+        <td class="filetable">LAS1.2</td>
+        <td class="filetable">V, W, C, P, O, A</td>
+        <td class="filetable">DEPT, ILD, ILM, SFLU, SP, DPHI, NPHI, GR, CALI</td>
+        <td class="filetable">861</td>
+        <td class="filetable">4950.0 (F)</td>
+        <td class="filetable">5380.0 (F)</td>
+        <td class="filetable">0.5 (F)</td>
+        <td class="filetable">104,783</td>
+        <td class="filetable">0.038 (s)</td>
+      </tr>
+      <tr class="filetable">
+        <td class="filetable" colspan="1" rowspan="1">
+          <a class="filetable" href="Ver_2_Canadian.las.html">Ver_2_Canadian.las.html</a>
+        </td>
+        <td class="filetable">LAS2.0</td>
+        <td class="filetable">V, W, C, P, O, A</td>
+        <td class="filetable">DEPT, ILD, ILM, SFLU, SP, DPHI, NPHI, GR, CALI</td>
+        <td class="filetable">861</td>
+        <td class="filetable">1509.0 (M)</td>
+        <td class="filetable">1640.064 (M)</td>
+        <td class="filetable">0.1524 (M)</td>
+        <td class="filetable">104,422</td>
+        <td class="filetable">0.047 (s)</td>
+      </tr>
+      <tr class="filetable">
+        <td class="filetable" colspan="1" rowspan="1">
+          <a class="filetable" href="Ver_2_USA.las.html">Ver_2_USA.las.html</a>
+        </td>
+        <td class="filetable">LAS2.0</td>
+        <td class="filetable">V, W, C, P, O, A</td>
+        <td class="filetable">DEPT, ILD, ILM, SFLU, SP, DPHI, NPHI, GR, CALI</td>
+        <td class="filetable">861</td>
+        <td class="filetable">4950.0 (F)</td>
+        <td class="filetable">5380.0 (F)</td>
+        <td class="filetable">0.5 (F)</td>
+        <td class="filetable">104,623</td>
+        <td class="filetable">0.039 (s)</td>
+      </tr>
+    </table>
   </body>
 </html>
